added notifications integration